parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     empty -> <empty>
Rule 3     stmt_list -> stmt_list statement
Rule 4     stmt_list -> statement
Rule 5     statement -> declaration_list NL
Rule 6     statement -> assignment NL
Rule 7     statement -> while NL
Rule 8     statement -> if NL
Rule 9     statement -> operator NL
Rule 10    statement -> function NL
Rule 11    statement -> function_call NL
Rule 12    statement -> RETURN NL
Rule 13    statement -> empty NL
Rule 14    declaration_list -> type vars_list
Rule 15    type -> INT
Rule 16    type -> CELL
Rule 17    type -> BOOL
Rule 18    type -> VAR
Rule 19    vars_list -> IDENT COMMA vars_list
Rule 20    vars_list -> assignment COMMA vars_list
Rule 21    vars_list -> IDENT
Rule 22    vars_list -> assignment
Rule 23    assignment -> variable ASSIGN expression
Rule 24    assignment -> variable ASSIGN array
Rule 25    array -> OSQBRACKET expr_list CSQBRACKET
Rule 26    expr_list -> expr_list COMMA expression
Rule 27    expr_list -> expression
Rule 28    variable -> IDENT OBRACKET expression CBRACKET
Rule 29    variable -> IDENT
Rule 30    expression -> variable
Rule 31    expression -> const
Rule 32    expression -> al_expression
Rule 33    expression -> function_call
Rule 34    expression -> operator
Rule 35    const -> INF
Rule 36    const -> MINUS_INF
Rule 37    const -> NAN
Rule 38    const -> TRUE
Rule 39    const -> FALSE
Rule 40    const -> UNDEF
Rule 41    const -> EMPTY
Rule 42    const -> WALL
Rule 43    const -> BOX
Rule 44    const -> EXIT
Rule 45    const -> DECIMAL
Rule 46    const -> HEXADECIMAL
Rule 47    al_expression -> expression PLUS expression
Rule 48    al_expression -> expression MINUS expression
Rule 49    al_expression -> MINUS expression
Rule 50    al_expression -> SHARP expression
Rule 51    al_expression -> expression CARET expression
Rule 52    al_expression -> expression GREATER expression
Rule 53    al_expression -> expression LESS expression
Rule 54    al_expression -> expression EQUAL expression
Rule 55    function_call -> IDENT OBRACKET variable CBRACKET
Rule 56    operator -> FORWARD expression
Rule 57    operator -> BACKWARD expression
Rule 58    operator -> LEFT
Rule 59    operator -> RIGHT
Rule 60    operator -> LOAD expression
Rule 61    operator -> DROP expression
Rule 62    operator -> LOOK
Rule 63    operator -> TEST
Rule 64    operator -> SIZEOF variable
Rule 65    while -> WHILE expression DO stmt_list DONE
Rule 66    while -> WHILE expression DO stmt_list FINISH stmt_list DONE
Rule 67    if -> IF expression DO stmt_list DONE
Rule 68    if -> IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE
Rule 69    if -> IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE NL ELUND DO stmt_list DONE
Rule 70    if -> IF expression DO stmt_list DONE NL ELUND DO stmt_list DONE
Rule 71    function -> FUNCTION OBRACKET IDENT CBRACKET DO stmt_list DONE
Rule 72    function -> FUNCTION IDENT OBRACKET IDENT CBRACKET DO NL stmt_list DONE

Terminals, with rules where they appear

ASSIGN               : 23 24
BACKWARD             : 57
BOOL                 : 17
BOX                  : 43
CARET                : 51
CBRACKET             : 28 55 71 72
CELL                 : 16
COMMA                : 19 20 26
CSQBRACKET           : 25
DECIMAL              : 45
DO                   : 65 66 67 68 68 69 69 69 70 70 71 72
DONE                 : 65 66 67 68 68 69 69 69 70 70 71 72
DROP                 : 61
ELDEF                : 68 69
ELUND                : 69 70
EMPTY                : 41
EQUAL                : 54
EXIT                 : 44
FALSE                : 39
FINISH               : 66
FORWARD              : 56
FUNCTION             : 71 72
GREATER              : 52
HEXADECIMAL          : 46
IDENT                : 19 21 28 29 55 71 72 72
IF                   : 67 68 69 70
INF                  : 35
INT                  : 15
LEFT                 : 58
LESS                 : 53
LOAD                 : 60
LOOK                 : 62
MINUS                : 48 49
MINUS_INF            : 36
NAN                  : 37
NL                   : 5 6 7 8 9 10 11 12 13 68 69 69 70 72
OBRACKET             : 28 55 71 72
OSQBRACKET           : 25
PLUS                 : 47
RETURN               : 12
RIGHT                : 59
SHARP                : 50
SIZEOF               : 64
TEST                 : 63
TRUE                 : 38
UNDEF                : 40
VAR                  : 18
WALL                 : 42
WHILE                : 65 66
error                : 

Nonterminals, with rules where they appear

al_expression        : 32
array                : 24
assignment           : 6 20 22
const                : 31
declaration_list     : 5
empty                : 13
expr_list            : 25 26
expression           : 23 26 27 28 47 47 48 48 49 50 51 51 52 52 53 53 54 54 56 57 60 61 65 66 67 68 69 70
function             : 10
function_call        : 11 33
if                   : 8
operator             : 9 34
program              : 0
statement            : 3 4
stmt_list            : 1 3 65 66 66 67 68 68 69 69 69 70 70 71 72
type                 : 14
variable             : 23 24 30 55 64
vars_list            : 14 19 20
while                : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (3) stmt_list -> . stmt_list statement
    (4) stmt_list -> . statement
    (5) statement -> . declaration_list NL
    (6) statement -> . assignment NL
    (7) statement -> . while NL
    (8) statement -> . if NL
    (9) statement -> . operator NL
    (10) statement -> . function NL
    (11) statement -> . function_call NL
    (12) statement -> . RETURN NL
    (13) statement -> . empty NL
    (14) declaration_list -> . type vars_list
    (23) assignment -> . variable ASSIGN expression
    (24) assignment -> . variable ASSIGN array
    (65) while -> . WHILE expression DO stmt_list DONE
    (66) while -> . WHILE expression DO stmt_list FINISH stmt_list DONE
    (67) if -> . IF expression DO stmt_list DONE
    (68) if -> . IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE
    (69) if -> . IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE NL ELUND DO stmt_list DONE
    (70) if -> . IF expression DO stmt_list DONE NL ELUND DO stmt_list DONE
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable
    (71) function -> . FUNCTION OBRACKET IDENT CBRACKET DO stmt_list DONE
    (72) function -> . FUNCTION IDENT OBRACKET IDENT CBRACKET DO NL stmt_list DONE
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (2) empty -> .
    (15) type -> . INT
    (16) type -> . CELL
    (17) type -> . BOOL
    (18) type -> . VAR
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT

    RETURN          shift and go to state 11
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    FORWARD         shift and go to state 17
    BACKWARD        shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    LOAD            shift and go to state 21
    DROP            shift and go to state 22
    LOOK            shift and go to state 23
    TEST            shift and go to state 24
    SIZEOF          shift and go to state 25
    FUNCTION        shift and go to state 26
    IDENT           shift and go to state 27
    NL              reduce using rule 2 (empty -> .)
    INT             shift and go to state 28
    CELL            shift and go to state 29
    BOOL            shift and go to state 30
    VAR             shift and go to state 31

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    statement                      shift and go to state 3
    declaration_list               shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    operator                       shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    empty                          shift and go to state 12
    type                           shift and go to state 13
    variable                       shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (3) stmt_list -> stmt_list . statement
    (5) statement -> . declaration_list NL
    (6) statement -> . assignment NL
    (7) statement -> . while NL
    (8) statement -> . if NL
    (9) statement -> . operator NL
    (10) statement -> . function NL
    (11) statement -> . function_call NL
    (12) statement -> . RETURN NL
    (13) statement -> . empty NL
    (14) declaration_list -> . type vars_list
    (23) assignment -> . variable ASSIGN expression
    (24) assignment -> . variable ASSIGN array
    (65) while -> . WHILE expression DO stmt_list DONE
    (66) while -> . WHILE expression DO stmt_list FINISH stmt_list DONE
    (67) if -> . IF expression DO stmt_list DONE
    (68) if -> . IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE
    (69) if -> . IF expression DO stmt_list DONE NL ELDEF DO stmt_list DONE NL ELUND DO stmt_list DONE
    (70) if -> . IF expression DO stmt_list DONE NL ELUND DO stmt_list DONE
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable
    (71) function -> . FUNCTION OBRACKET IDENT CBRACKET DO stmt_list DONE
    (72) function -> . FUNCTION IDENT OBRACKET IDENT CBRACKET DO NL stmt_list DONE
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (2) empty -> .
    (15) type -> . INT
    (16) type -> . CELL
    (17) type -> . BOOL
    (18) type -> . VAR
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT

    $end            reduce using rule 1 (program -> stmt_list .)
    RETURN          shift and go to state 11
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    FORWARD         shift and go to state 17
    BACKWARD        shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    LOAD            shift and go to state 21
    DROP            shift and go to state 22
    LOOK            shift and go to state 23
    TEST            shift and go to state 24
    SIZEOF          shift and go to state 25
    FUNCTION        shift and go to state 26
    IDENT           shift and go to state 27
    NL              reduce using rule 2 (empty -> .)
    INT             shift and go to state 28
    CELL            shift and go to state 29
    BOOL            shift and go to state 30
    VAR             shift and go to state 31

    statement                      shift and go to state 32
    declaration_list               shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    operator                       shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    empty                          shift and go to state 12
    type                           shift and go to state 13
    variable                       shift and go to state 14

state 3

    (4) stmt_list -> statement .

    RETURN          reduce using rule 4 (stmt_list -> statement .)
    WHILE           reduce using rule 4 (stmt_list -> statement .)
    IF              reduce using rule 4 (stmt_list -> statement .)
    FORWARD         reduce using rule 4 (stmt_list -> statement .)
    BACKWARD        reduce using rule 4 (stmt_list -> statement .)
    LEFT            reduce using rule 4 (stmt_list -> statement .)
    RIGHT           reduce using rule 4 (stmt_list -> statement .)
    LOAD            reduce using rule 4 (stmt_list -> statement .)
    DROP            reduce using rule 4 (stmt_list -> statement .)
    LOOK            reduce using rule 4 (stmt_list -> statement .)
    TEST            reduce using rule 4 (stmt_list -> statement .)
    SIZEOF          reduce using rule 4 (stmt_list -> statement .)
    FUNCTION        reduce using rule 4 (stmt_list -> statement .)
    IDENT           reduce using rule 4 (stmt_list -> statement .)
    INT             reduce using rule 4 (stmt_list -> statement .)
    CELL            reduce using rule 4 (stmt_list -> statement .)
    BOOL            reduce using rule 4 (stmt_list -> statement .)
    VAR             reduce using rule 4 (stmt_list -> statement .)
    NL              reduce using rule 4 (stmt_list -> statement .)
    $end            reduce using rule 4 (stmt_list -> statement .)
    DONE            reduce using rule 4 (stmt_list -> statement .)
    FINISH          reduce using rule 4 (stmt_list -> statement .)


state 4

    (5) statement -> declaration_list . NL

    NL              shift and go to state 33


state 5

    (6) statement -> assignment . NL

    NL              shift and go to state 34


state 6

    (7) statement -> while . NL

    NL              shift and go to state 35


state 7

    (8) statement -> if . NL

    NL              shift and go to state 36


state 8

    (9) statement -> operator . NL

    NL              shift and go to state 37


state 9

    (10) statement -> function . NL

    NL              shift and go to state 38


state 10

    (11) statement -> function_call . NL

    NL              shift and go to state 39


state 11

    (12) statement -> RETURN . NL

    NL              shift and go to state 40


state 12

    (13) statement -> empty . NL

    NL              shift and go to state 41


state 13

    (14) declaration_list -> type . vars_list
    (19) vars_list -> . IDENT COMMA vars_list
    (20) vars_list -> . assignment COMMA vars_list
    (21) vars_list -> . IDENT
    (22) vars_list -> . assignment
    (23) assignment -> . variable ASSIGN expression
    (24) assignment -> . variable ASSIGN array
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT

    IDENT           shift and go to state 43

    vars_list                      shift and go to state 42
    assignment                     shift and go to state 44
    variable                       shift and go to state 14

state 14

    (23) assignment -> variable . ASSIGN expression
    (24) assignment -> variable . ASSIGN array

    ASSIGN          shift and go to state 45


state 15

    (65) while -> WHILE . expression DO stmt_list DONE
    (66) while -> WHILE . expression DO stmt_list FINISH stmt_list DONE
    (30) expression -> . variable
    (31) expression -> . const
    (32) expression -> . al_expression
    (33) expression -> . function_call
    (34) expression -> . operator
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT
    (35) const -> . INF
    (36) const -> . MINUS_INF
    (37) const -> . NAN
    (38) const -> . TRUE
    (39) const -> . FALSE
    (40) const -> . UNDEF
    (41) const -> . EMPTY
    (42) const -> . WALL
    (43) const -> . BOX
    (44) const -> . EXIT
    (45) const -> . DECIMAL
    (46) const -> . HEXADECIMAL
    (47) al_expression -> . expression PLUS expression
    (48) al_expression -> . expression MINUS expression
    (49) al_expression -> . MINUS expression
    (50) al_expression -> . SHARP expression
    (51) al_expression -> . expression CARET expression
    (52) al_expression -> . expression GREATER expression
    (53) al_expression -> . expression LESS expression
    (54) al_expression -> . expression EQUAL expression
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable

    IDENT           shift and go to state 52
    INF             shift and go to state 53
    MINUS_INF       shift and go to state 54
    NAN             shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    UNDEF           shift and go to state 58
    EMPTY           shift and go to state 59
    WALL            shift and go to state 60
    BOX             shift and go to state 61
    EXIT            shift and go to state 62
    DECIMAL         shift and go to state 63
    HEXADECIMAL     shift and go to state 64
    MINUS           shift and go to state 65
    SHARP           shift and go to state 66
    FORWARD         shift and go to state 17
    BACKWARD        shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    LOAD            shift and go to state 21
    DROP            shift and go to state 22
    LOOK            shift and go to state 23
    TEST            shift and go to state 24
    SIZEOF          shift and go to state 25

    expression                     shift and go to state 46
    variable                       shift and go to state 47
    const                          shift and go to state 48
    al_expression                  shift and go to state 49
    function_call                  shift and go to state 50
    operator                       shift and go to state 51

state 16

    (67) if -> IF . expression DO stmt_list DONE
    (68) if -> IF . expression DO stmt_list DONE NL ELDEF DO stmt_list DONE
    (69) if -> IF . expression DO stmt_list DONE NL ELDEF DO stmt_list DONE NL ELUND DO stmt_list DONE
    (70) if -> IF . expression DO stmt_list DONE NL ELUND DO stmt_list DONE
    (30) expression -> . variable
    (31) expression -> . const
    (32) expression -> . al_expression
    (33) expression -> . function_call
    (34) expression -> . operator
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT
    (35) const -> . INF
    (36) const -> . MINUS_INF
    (37) const -> . NAN
    (38) const -> . TRUE
    (39) const -> . FALSE
    (40) const -> . UNDEF
    (41) const -> . EMPTY
    (42) const -> . WALL
    (43) const -> . BOX
    (44) const -> . EXIT
    (45) const -> . DECIMAL
    (46) const -> . HEXADECIMAL
    (47) al_expression -> . expression PLUS expression
    (48) al_expression -> . expression MINUS expression
    (49) al_expression -> . MINUS expression
    (50) al_expression -> . SHARP expression
    (51) al_expression -> . expression CARET expression
    (52) al_expression -> . expression GREATER expression
    (53) al_expression -> . expression LESS expression
    (54) al_expression -> . expression EQUAL expression
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable

    IDENT           shift and go to state 52
    INF             shift and go to state 53
    MINUS_INF       shift and go to state 54
    NAN             shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    UNDEF           shift and go to state 58
    EMPTY           shift and go to state 59
    WALL            shift and go to state 60
    BOX             shift and go to state 61
    EXIT            shift and go to state 62
    DECIMAL         shift and go to state 63
    HEXADECIMAL     shift and go to state 64
    MINUS           shift and go to state 65
    SHARP           shift and go to state 66
    FORWARD         shift and go to state 17
    BACKWARD        shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    LOAD            shift and go to state 21
    DROP            shift and go to state 22
    LOOK            shift and go to state 23
    TEST            shift and go to state 24
    SIZEOF          shift and go to state 25

    expression                     shift and go to state 67
    variable                       shift and go to state 47
    const                          shift and go to state 48
    al_expression                  shift and go to state 49
    function_call                  shift and go to state 50
    operator                       shift and go to state 51

state 17

    (56) operator -> FORWARD . expression
    (30) expression -> . variable
    (31) expression -> . const
    (32) expression -> . al_expression
    (33) expression -> . function_call
    (34) expression -> . operator
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT
    (35) const -> . INF
    (36) const -> . MINUS_INF
    (37) const -> . NAN
    (38) const -> . TRUE
    (39) const -> . FALSE
    (40) const -> . UNDEF
    (41) const -> . EMPTY
    (42) const -> . WALL
    (43) const -> . BOX
    (44) const -> . EXIT
    (45) const -> . DECIMAL
    (46) const -> . HEXADECIMAL
    (47) al_expression -> . expression PLUS expression
    (48) al_expression -> . expression MINUS expression
    (49) al_expression -> . MINUS expression
    (50) al_expression -> . SHARP expression
    (51) al_expression -> . expression CARET expression
    (52) al_expression -> . expression GREATER expression
    (53) al_expression -> . expression LESS expression
    (54) al_expression -> . expression EQUAL expression
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable

    IDENT           shift and go to state 52
    INF             shift and go to state 53
    MINUS_INF       shift and go to state 54
    NAN             shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    UNDEF           shift and go to state 58
    EMPTY           shift and go to state 59
    WALL            shift and go to state 60
    BOX             shift and go to state 61
    EXIT            shift and go to state 62
    DECIMAL         shift and go to state 63
    HEXADECIMAL     shift and go to state 64
    MINUS           shift and go to state 65
    SHARP           shift and go to state 66
    FORWARD         shift and go to state 17
    BACKWARD        shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    LOAD            shift and go to state 21
    DROP            shift and go to state 22
    LOOK            shift and go to state 23
    TEST            shift and go to state 24
    SIZEOF          shift and go to state 25

    expression                     shift and go to state 68
    variable                       shift and go to state 47
    const                          shift and go to state 48
    al_expression                  shift and go to state 49
    function_call                  shift and go to state 50
    operator                       shift and go to state 51

state 18

    (57) operator -> BACKWARD . expression
    (30) expression -> . variable
    (31) expression -> . const
    (32) expression -> . al_expression
    (33) expression -> . function_call
    (34) expression -> . operator
    (28) variable -> . IDENT OBRACKET expression CBRACKET
    (29) variable -> . IDENT
    (35) const -> . INF
    (36) const -> . MINUS_INF
    (37) const -> . NAN
    (38) const -> . TRUE
    (39) const -> . FALSE
    (40) const -> . UNDEF
    (41) const -> . EMPTY
    (42) const -> . WALL
    (43) const -> . BOX
    (44) const -> . EXIT
    (45) const -> . DECIMAL
    (46) const -> . HEXADECIMAL
    (47) al_expression -> . expression PLUS expression
    (48) al_expression -> . expression MINUS expression
    (49) al_expression -> . MINUS expression
    (50) al_expression -> . SHARP expression
    (51) al_expression -> . expression CARET expression
    (52) al_expression -> . expression GREATER expression
    (53) al_expression -> . expression LESS expression
    (54) al_expression -> . expression EQUAL expression
    (55) function_call -> . IDENT OBRACKET variable CBRACKET
    (56) operator -> . FORWARD expression
    (57) operator -> . BACKWARD expression
    (58) operator -> . LEFT
    (59) operator -> . RIGHT
    (60) operator -> . LOAD expression
    (61) operator -> . DROP expression
    (62) operator -> . LOOK
    (63) operator -> . TEST
    (64) operator -> . SIZEOF variable
